Bug 932656 - Use CGSSetWindowBackgroundBlurRadius for blurring the background behind context menus. r=smichaud